1) New functionality based on tag's corners. 2) Fixed issue with `reset` button on some devices.

--- a/templates/index.html
+++ b/templates/index.html
@@ -160,7 +160,7 @@ __  ____   _______
 	</script>
 
 	<script>
-		$("#reset").on('click', function(e) {
+		$("#reset").on("touchstart click", function(e) {
 		        data = $("#reset").html();
 		        $.ajax({
 		                type: 'POST',
